--- a/song-recommender/package.json
+++ b/song-recommender/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "cypress:dev": "npx cypress run --config-file cypress-dev.config.ts",
+    "cypress:prod": "npx cypress run --config-file cypress-prod.config.ts"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "cypress": "^12.11.0",
     "primeng": "15.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
