--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "cypress:dev": "npx cypress run --config-file cypress-dev.config.ts",
+    "cypress:dev": "npx cypress run --config-file cypress-dev.config.ts --headed",
     "cypress:prod": "npx cypress run --config-file cypress-prod.config.ts"
   },
   "private": true,
