--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "cypress:dev": "npx cypress run --config-file cypress-dev.config.ts --headed",
-    "cypress:prod": "npx cypress run --config-file cypress-prod.config.ts"
+    "cypress:integration:dev": "npx cypress run --config-file cypress-integration-dev.config.ts --headed",
+    "cypress:acceptance:dev": "npx cypress run --config-file cypress-acceptance-dev.config.ts --headed",
+    "cypress:integration:prod": "npx cypress run --config-file cypress-integration-prod.config.ts",
+    "cypress:acceptance:prod": "npx cypress run --config-file cypress-acceptance-prod.config.ts"
   },
   "private": true,
   "dependencies": {
