--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "chart.js": "^4.3.0",
     "cypress": "^12.11.0",
     "primeng": "15.4.0",
     "rxjs": "~7.8.0",
