--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,34 +3,32 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
-    # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
-    # Also see warning here https://github.com/cypress-io/github-action#parallel
     strategy:
-      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
+      fail-fast: false
       matrix:
-        containers: [1, 2] # Uses 2 parallel instances
+        containers: [1]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           node-version: 16
-      - name: Cypress run
-        # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
+      - name: Acceptance tests run
         uses: cypress-io/github-action@v4
         with:
           install-command: npm install --legacy-peer-deps
-          # Starts web server for E2E tests - replace with your own server invocation
-          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          start: npm start --legacy-peer-deps
-          # wait-on: 'http://127.0.0.1:4200' # Waits for above
-          # Records to Cypress Cloud 
-          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+          start: npm start
+          record: true
+          command: npx cypress run --config-file cypress-acceptance-prod.config.ts
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      - name: Integration tests run
+        uses: cypress-io/github-action@v4
+        with:
+          install-command: npm install --legacy-peer-deps
+          start: npm start
           record: true
           command: npx cypress run --config-file cypress-integration-prod.config.ts
         env:
-          # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
-          # in GitHub repo → Settings → Secrets → Actions
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
